Revision history for TBX-Min

{{$NEXT}}
    Fixed warning on 5.10.X
0.04      2014-01-28 19:27:39 America/Los_Angeles
    "conceptEntry" element changed to "entry"
0.03      2013-11-19 16:50:25 America/Los_Angeles
    Uninitialized arrays are now returned as [] instead of undef
0.02      2013-11-12 14:07:47 America/Los_Angeles
    Several changes were made to the TBX-Min dialect to ensure compatibility
    with UTX:
        renamed "origin" to "creator"
        renamed "title" to "id"
        added "description" field to header
        added "dateCreated" field to header
        removed "doc_lang"

0.01      2013-11-08 21:18:18 America/Los_Angeles
	initial release